Update contact links in index.html for Telegram and WhatsApp

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             </div>
 
             <div class="contact-section">
-                <a href="https://t.me/yourusername" class="contact-button telegram">
+                <a href="https://t.me/chickysnail" class="contact-button telegram">
                     <i class="fab fa-telegram"></i>
                     <span>Telegram</span>
                 </a>
-                <a href="https://wa.me/yourphonenumber" class="contact-button whatsapp">
+                <a href="https://wa.me/+4915901603806" class="contact-button whatsapp">
                     <i class="fab fa-whatsapp"></i>
                     <span>WhatsApp</span>
                 </a>
